--- a/.github/workflows/ci.local.yml
+++ b/.github/workflows/ci.local.yml
@@ -1,8 +1,7 @@
 name: create aws s3 bucket
 
 on:
-  push:
-    branches: [main]
+  workflow_dispatch:
 
 jobs:
   build:
@@ -13,9 +12,9 @@ jobs:
 
       - name: Install unzip
         run: |
-          sudo apt-get update
-          sudo apt-get install -y unzip
-          sudo apt-get install -y unzip ca-certificates
+          apt-get update
+          apt-get install -y unzip
+          apt-get install -y unzip ca-certificates
 
       - name: "Configure AWS Credentials action for GitHub Actions"
         uses: aws-actions/configure-aws-credentials@v4.0.2
